--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1746,10 +1746,8 @@ Oak releases, please see the Oak issue tracker at
 Release Contents
 ----------------
 
-This release consists of a single source archive packaged as a zip
-file.
-The archive can be unpacked with the jar tool from your JDK
-installation.
+This release consists of a single source archive packaged as a zip file.
+The archive can be unpacked with the jar tool from your JDK installation.
 See the README.md file for instructions on how to build this release.
 
 The source archive is accompanied by SHA1, SHA512 and MD5 checksums and a
@@ -1772,15 +1770,11 @@ For more information, visit http://jackrabbit.apache.org/oak
 About The Apache Software Foundation
 ------------------------------------
 
-Established in 1999, The Apache Software Foundation provides
-organizational,
+Established in 1999, The Apache Software Foundation provides organizational,
 legal, and financial support for more than 140 freely-available,
-collaboratively-developed Open Source projects. The pragmatic Apache
-License
-enables individual and commercial users to easily deploy Apache
-software;
-the Foundation's intellectual property framework limits the legal
-exposure
+collaboratively-developed Open Source projects. The pragmatic Apache License
+enables individual and commercial users to easily deploy Apache software;
+the Foundation's intellectual property framework limits the legal exposure
 of its 3,800+ contributors.
 
 For more information, visit http://www.apache.org/
