--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1750,7 +1750,7 @@ This release consists of a single source archive packaged as a zip file.
 The archive can be unpacked with the jar tool from your JDK installation.
 See the README.md file for instructions on how to build this release.
 
-The source archive is accompanied by SHA1, SHA512 and MD5 checksums and a
+The source archive is accompanied by SHA1 and SHA512 checksums and a
 PGP signature that you can use to verify the authenticity of your
 download. The public key used for the PGP signature can be found at
 https://svn.apache.org/repos/asf/jackrabbit/dist/KEYS.
